# soundcloud-dl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: audio.rs  cli.rs  config.rs  downloader.rs  error.rs  ffmpeg.rs  main.rs  util.rs
src/ffmpeg/: download.rs  ffmpeg.rs  mod.rs
src/soundcloud/: mod.rs  model.rs  rest.rs
