[package]
name = "soundcloud-dl"
version = "0.2.0"
edition = "2021"
authors = ["Tyler Thompson <yoitscore@gmail.com>"]
description = "An easy, fast and efficient tool written in Rust for downloading songs from SoundCloud."
license = "MIT"
repository = "https://github.com/damaredayo/soundcloud-dl"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
bytes = { version = "1" }
thiserror = { version = "1.0" }
id3 = { version = "1.0" }
tempfile = { version = "3.13" }
rand = { version = "0.8" }
futures = { version = "0.3" }
directories = { version = "5.0" }
toml = { version = "0.8" }